[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nqlstore"
authors = [
    {name = "Martin Ahindura", email = "sales@sopherapps.com"},
]
version = "0.1.5"
description = "NQLStore, a simple CRUD store python library for `any query launguage` (or in short `nql`)."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["database", "model", "orm"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydantic~=2.10.6",
]

[project.optional-dependencies]
test = [
    "pytest~=8.3.4",
    "pytest-asyncio~=0.25.2",
    "isort~=5.13.2",
    "black~=24.10.0",
]
sql = [
    "sqlmodel~=0.0.22",
    "aiosqlite~=0.20.0",
    "greenlet~=3.1.1",
]
mongo = ["beanie~=1.29.0"]
redis = ["redis-om~=0.3.3"]
all = [
    "sqlmodel~=0.0.22",
    "aiosqlite~=0.20.0",
    "greenlet~=3.1.1",
    "beanie~=1.29.0",
    "redis-om~=0.3.3",
]

[project.urls]
Homepage = "https://github.com/sopherapps/nqlstore"
Repository = "https://github.com/sopherapps/nqlstore"
Documentation = "https://github.com/sopherapps/nqlstore"
Issues = "https://github.com/sopherapps/nqlstore/issues"
Changelog = "https://github.com/sopherapps/nqlstore/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["nqlstore"]

[tool.isort]
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
